styled nav bar incl. contact button and hover state

--- a/index.html
+++ b/index.html
@@ -10,25 +10,22 @@
 
 </head>
 <body>
-  <nav>
-    <div>
-      <img src="images/logo.svg" alt="">
-    </div>
-    <div>
-      <ul>
+  <section id="hero">
+    <nav>
+      <a href="/" id="logo">
+        <img src="images/logo.svg" alt="">
+      </a>
+      <ul id="nav-items">
         <li><a href="">About</a></li>
         <li><a href="">Services</a></li>
         <li><a href="">Projects</a></li>
-        <li><a href="">Contact</a></li>
+        <li><a href="" class="contact-btn">Contact</a></li>
       </ul>
-    </div>
-  </nav>
-  <section>
-
+    </nav>
+    <h1 id="hero-headline">We are creatives</h1>
   </section>
   
 
-  We are creatives
 
   Transform your brand
 
