insert hero title and arrow

--- a/index.html
+++ b/index.html
@@ -22,7 +22,10 @@
         <li><a href="" class="contact-btn">Contact</a></li>
       </ul>
     </nav>
-    <h1 id="hero-headline">We are creatives</h1>
+    <div id="hero-headline">
+      <h1 >We are creatives</h1>
+      <img src="images/icon-arrow-down.svg" alt="" class="arrow-down">
+    </div>
   </section>
   
 
