basic design implementation of tile cards

--- a/index.html
+++ b/index.html
@@ -27,27 +27,32 @@
       <img src="images/icon-arrow-down.svg" alt="" class="arrow-down">
     </div>
   </section>
-  
+  <section id="grid">
+    <div class="tile tile-white">
+      <h2>Transform your brand</h2>
+      <p>We are a full-service creative agency specializing in helping brands grow fast. Engage your clients through compelling visuals that do most of the marketing for you.</p>
+      <a href="" class="underline underline-yellow">Learn more</a>
+    </div>
+    <div class="tile tile-img">
+    </div>
+    <div class="tile tile-img">
+    </div>
+    <div class="tile tile-white">
+      <h2>Stand out to the right audience</h2>
+      <p>Using a collaborative formula of designers, researchers, photographers, videographers, and copywriters, we’ll build and extend your brand in digital places.</p>
+      <a href="" class="underline underline-pink">Learn more</a>
+    </div>
+    <div class="tile tile-img">
+      <h3>Graphic design</h3>
+      <p>Great design makes you memorable. We deliver artwork that underscores your brand message and captures potential clients’ attention.
+      </p>
+    </div>
+    <div class="tile tile-img">
+      <h3>Photography</h3>
+      <p>Increase your credibility by getting the most stunning, high-quality photos that improve your business image.</p>
+    </div>
+  </section>
 
-
-  Transform your brand
-
-  We are a full-service creative agency specializing in helping brands grow fast. 
-  Engage your clients through compelling visuals that do most of the marketing for you.
-
-  Learn more
-
-  Stand out to the right audience
-
-  Using a collaborative formula of designers, researchers, photographers, videographers, and copywriters, we’ll build and extend your brand in digital places. 
-
-  Learn more
-
-  Graphic design
-  Great design makes you memorable. We deliver artwork that underscores your brand message and captures potential clients’ attention.
-
-  Photography
-  Increase your credibility by getting the most stunning, high-quality photos that improve your business image.
 
   Client testimonials
 
