basic testimonial design

--- a/index.html
+++ b/index.html
@@ -52,22 +52,41 @@
       <p>Increase your credibility by getting the most stunning, high-quality photos that improve your business image.</p>
     </div>
   </section>
-
-
-  Client testimonials
-
-  We put our trust in Sunnyside and they delivered, making sure our needs were met and deadlines were always hit.
-  Emily R.
-  Marketing Director
-
-  Sunnyside’s enthusiasm coupled with their keen interest in our brand’s success made it a satisfying and enjoyable experience.
-  Thomas S.
-  Chief Operating Officer
-
-  Incredible end result! Our sales increased over 400% when we worked with Sunnyside. Highly recommended!
-  Jennie F.
-  Business Owner
-
+  <section id="testimonials">
+    <h2>Client testimonials</h2>
+    <div class="testimonial-cards">
+      <div class="testimonial-card">
+        <div class="img">
+          <img src="images/image-emily.jpg" alt="">
+        </div>
+        <p>We put our trust in Sunnyside and they delivered, making sure our needs were met and deadlines were always hit.</p>
+        <div class="testimonial-author">
+          <p>Emily R.</p>
+          <p>Marketing Director</p>
+        </div>
+      </div>
+      <div class="testimonial-card">
+        <div class="img">
+          <img src="images/image-thomas.jpg" alt="">
+        </div>
+        <p> Sunnyside’s enthusiasm coupled with their keen interest in our brand’s success made it a satisfying and enjoyable experience.</p>
+        <div class="testimonial-author">
+          <p>Thomas S.</p>
+          <p>Chief Operating Officer</p>
+        </div>
+      </div>
+      <div class="testimonial-card">
+        <div class="img">
+          <img src="images/image-jennie.jpg" alt="">
+        </div>
+        <p>Incredible end result! Our sales increased over 400% when we worked with Sunnyside. Highly recommended!</p>
+        <div class="testimonial-author">
+          <p>Jennie F.</p>
+          <p>Business Owner</p>
+        </div>
+      </div>
+    </div>
+  </section>
   About
   Services
   Projects
